# corridor_Bspline_optimization

./: README.md
bspline_opt/: CMakeLists.txt  package.xml
bspline_opt/include/bspline_opt/: bspline_optimizer.h  gradient_descent_optimizer.h  lbfgs.hpp  uniform_bspline.h
bspline_opt/src/: bspline_optimizer.cpp  uniform_bspline.cpp
common/: CMakeLists.txt  package.xml
common/include/: binary.h  log.h  point.h  point_factory.h
common/include/math/: aabox2d.h  box2d.h  discrete_points_math.h  fem_pos_deviation_sqp_osqp_interface.h  line_segment2d.h  linear_interpolation.h  math_utils.h  polygon2d.h  vec2d.h
common/include/path/: discretized_path.h
common/include/status/: status.h
common/include/trajectory/: discretized_trajectory.h
common/src/: aabox2d.cc  binary.cpp  box2d.cc  discrete_points_math.cc  discretized_path.cpp  discretized_path_test.cpp  discretized_trajectory.cpp  discretized_trajectory_test.cpp  fem_pos_deviation_sqp_osqp_interface.cc  line_segment2d.cc  linear_interpolation.cpp  linear_interpolation_test.cpp  math_utils.cpp  polygon2d.cc  status_test.cpp  vec2d.cpp
hybrid_a_star/: CMakeLists.txt  package.xml
hybrid_a_star/include/hybrid_a_star/: costmap_subscriber.h  display_tools.h  goal_pose_subscriber.h  hybrid_a_star.h  hybrid_a_star_flow.h  init_pose_subscriber.h  iterative_anchoring_smoother.h  rs_path.h  state_node.h  timer.h  trajectory_optimizer.h  type.h
hybrid_a_star/src/: costmap_subscriber.cpp  goal_pose_subscriber.cpp  hybrid_a_star.cpp  hybrid_a_star_flow.cpp  init_pose_subscriber.cpp  iterative_anchoring_smoother.cpp  rs_path.cpp
plan_manage/: CMakeLists.txt  package.xml
plan_manage/include/plan_manage/: CubicSpline.h  plan_container.hpp  planner_manager.h  planning_visualization.h
plan_manage/launch/: run_opt_planner.launch
plan_manage/maps/: map.yaml
plan_manage/model/car_model/: default.urdf
plan_manage/rviz/: display_hybrid_astar.rviz
plan_manage/src/: CubicSpline.cpp  opt_planner_node.cpp  planner_manager.cpp  planning_visualization.cpp
